clean up environment variables

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-TEST_RACK_ENV=development
-
+RACK_ENV=development
+DATABASE_URL=sqlite://db/stub.db
+SECRET_KEY=SECRET_KEY
+SECRET_TOKEN=SECRET_TOKEN
